[gd_scene load_steps=3 format=2]

[ext_resource path="res://produce_zombie.gd" type="Script" id=1]

[sub_resource type="CircleShape2D" id=1]

radius = 15.0

[node name="produce_zombie_point" type="Node2D"]
script = ExtResource( 1 )

[node name="Arae" type="Area2D" parent="."]
editor/display_folded = true
collision_layer = 64
collision_mask = 32

[node name="CollisionShape2D" type="CollisionShape2D" parent="Arae"]
shape = SubResource( 1 )

[node name="timer" type="Timer" parent="."]
wait_time = 4.0
one_shot = true

[connection signal="area_shape_entered" from="Arae" to="." method="_on_Arae_area_shape_entered"]
[connection signal="area_shape_exited" from="Arae" to="." method="_on_Arae_area_shape_exited"]
[connection signal="timeout" from="timer" to="." method="_on_timer_timeout"]
